test/bad/illegal-shadow.sam
// ERROR_COUNT: 6
// illegal-shadow.sam:10:7-10:8: [Collision]: Name `A` collides with a previously defined name.
// illegal-shadow.sam:14:12-14:16: [Collision]: Name `test` collides with a previously defined name.
// illegal-shadow.sam:19:10-19:14: [Collision]: Name `test` collides with a previously defined name.
// illegal-shadow.sam:24:12-24:16: [Collision]: Name `test` collides with a previously defined name.
// illegal-shadow.sam:28:28-28:32: [Collision]: Name `test` collides with a previously defined name.
// illegal-shadow.sam:34:9-34:10: [Collision]: Name `a` collides with a previously defined name.

class A {}
class A {}

class ConflictingFunctions {
  function test(): unit = ConflictingFunctions.test()
  function test(): unit = ConflictingFunctions.test()
}

class ConflictingMethods(val a: int) {
  method test(): int = 42
  method test(): int = 42
}

class ConflictingMethodsAndFunctions(val a: int) {
  method test(): int = 42
  function test(): unit = ConflictingMethodsAndFunctions.test()
}

class FunctionParametersConflict {
  function test(test: int, test: int): unit = {}
}

class Main {
  function main(): unit = {
    val a = 42;
    val a = 42;
  }
}
